syntax = "proto3";

package skysign_proto;

option java_package = "proto.skysign.common";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

enum CommandType {
    ARM = 0;
    DISARM = 1;
    UPLOAD = 2;
    START = 3;
    PAUSE = 4;
    TAKEOFF = 5;
    LAND = 6;
    RETURN = 7;
    NONE = 99;
}

message Empty {
}

message Vehicle {
    string id = 1;
    string name = 2;
    string commId = 3;
}

message Mission {
    string id = 1;
    string name = 2;
    double takeoffPointGroundHeight = 3;
    repeated MissionItem items = 4;
}

message MissionItem {
    double latitude = 1;
    double longitude = 2;
    double relativeHeight = 3;
    double speed = 4;
}

message Telemetry {
    double latitude = 1;
    double longitude = 2;
    double altitude = 3;
    double relativeAltitude = 4;
    double speed = 5;
    bool armed = 6;
    string flightMode = 7;
    double orientationX = 8;
    double orientationY = 9;
    double orientationZ = 10;
    double orientationW = 11;
}

message Communication {
    string id = 1;
    bool isControlled = 2;
}

message Flightplan {
    string id = 1;
    string name = 2;
    string description = 3;
}

message Assignment {
    string id = 1;
    string assignment_id = 2;
    string vehicle_id = 3;
    string mission_id = 4;
}
